next
Warning: this version is not backwards compatible to 0.3.

[+] Add method deleteEavAttributes()
[*] Delete findByEavAttributes() and findAllByEavAttributes() method. Use withEavAttributes()
[+] New syntax: $contacts = Contact::model()->withEavAttributes(array('skype' => 'yii'))->findAll();
[+] Add init test.
[+] Add setAttributes method.
[*] setEavAttribute now return owner CActiveRecord.
[*] Fix deleting eav-attributes after delete models.
[*] Fix save array of attribute values.
[*] Fix save secondary change for attribute value.
[*] Add translation for messages.
[+] English readme.
[*] Corrected english descriptions.
[*] getEavAttribute now returns null if attribute is not defined.
[*] Minor code impovements.

0.3
[-] Deleted method readEavAttributes
[+] Search model by eav-attribute set
[+] All queries in DB will generated by CDbCriteria
[*] Method saveEavAttributes changed to saveEavAttribute to allow to save each attribute
[*] Method getModelTableFk now returns value of primary key. To get FK name use getModelTableFkField

0.2
[-] AR for each eav-attribute

0.1
[+] Initial public release.